heading fonts changed, minor UI changed, Block functionality added, placeholder for no user added, In app purchases added and functional, social media links made clickable, tool tips added for almost all buttons, splash animation added.

--- a/Kismat App/Info.plist
+++ b/Kismat App/Info.plist
@@ -11,6 +11,7 @@
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>SuezOne-Regular.ttf</string>
 		<string>Work Sans.ttf</string>
 		<string>Work Sans Bold.ttf</string>
 		<string>Roboto-Black.ttf</string>
