--- a/Kismat App/Info.plist
+++ b/Kismat App/Info.plist
@@ -1,28 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>SuezOne-Regular.ttf</string>
-		<string>Work Sans.ttf</string>
-		<string>Work Sans Bold.ttf</string>
-		<string>Roboto-Black.ttf</string>
-		<string>Roboto-Bold.ttf</string>
-		<string>Roboto-Light.ttf</string>
-		<string>Roboto-Medium.ttf</string>
-		<string>Roboto-Regular.ttf</string>
-	</array>
-	<key>baseURL</key>
-	<string>$(baseURL)</string>
-	<key>protocol</key>
-	<string>$(protocol)</string>
-</dict>
+    <dict>
+        <key>CFBundleDevelopmentRegion</key>
+        <string>$(DEVELOPMENT_LANGUAGE)</string>
+        <key>CFBundleExecutable</key>
+        <string>$(EXECUTABLE_NAME)</string>
+        <key>CFBundleIdentifier</key>
+        <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+        <key>CFBundleInfoDictionaryVersion</key>
+        <string>6.0</string>
+        <key>CFBundleName</key>
+        <string>$(PRODUCT_NAME)</string>
+        <key>CFBundlePackageType</key>
+        <string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
+        <key>CFBundleShortVersionString</key>
+        <string>$(MARKETING_VERSION)</string>
+        <key>CFBundleVersion</key>
+        <string>$(CURRENT_PROJECT_VERSION)</string>
+        <key>ITSAppUsesNonExemptEncryption</key>
+        <false/>
+        <key>LSRequiresIPhoneOS</key>
+        <true/>
+        <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSAllowsArbitraryLoads</key>
+            <true/>
+        </dict>
+        <key>UIAppFonts</key>
+        <array>
+            <string>SuezOne-Regular.ttf</string>
+            <string>Work Sans.ttf</string>
+            <string>Work Sans Bold.ttf</string>
+            <string>Roboto-Black.ttf</string>
+            <string>Roboto-Bold.ttf</string>
+            <string>Roboto-Light.ttf</string>
+            <string>Roboto-Medium.ttf</string>
+            <string>Roboto-Regular.ttf</string>
+        </array>
+        <key>NSAppleMusicUsageDescription</key>
+        <string>This allows you to take photos from within the image library (e.g. your profile photo)</string>
+        <key>NSCameraUsageDescription</key>
+        <string>This allows you to take photos from within the app (e.g. your profile photo)</string>
+        <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+        <string>To get user arround you, Kismmet app would require location data from the time you open the app until a app closes.</string>
+        <key>NSLocationAlwaysUsageDescription</key>
+        <string>To get user arround you, Kismmet app would require location data from the time you open the app until a app closes.</string>
+        <key>NSLocationWhenInUseUsageDescription</key>
+        <string>To get user arround you, Kismmet app would require location data from the time you open the app until a app closes.</string>
+        <key>UIApplicationSupportsIndirectInputEvents</key>
+        <true/>
+        <key>UILaunchStoryboardName</key>
+        <string>LaunchScreen</string>
+        <key>UIMainStoryboardFile</key>
+        <string>Main</string>
+        <key>UIRequiredDeviceCapabilities</key>
+        <array>
+            <string>armv7</string>
+        </array>
+        <key>UISupportedInterfaceOrientations</key>
+        <array>
+            <string>UIInterfaceOrientationPortrait</string>
+        </array>
+        <key>UISupportedInterfaceOrientations~ipad</key>
+        <array>
+            <string>UIInterfaceOrientationPortrait</string>
+            <string>UIInterfaceOrientationPortraitUpsideDown</string>
+            <string>UIInterfaceOrientationLandscapeLeft</string>
+            <string>UIInterfaceOrientationLandscapeRight</string>
+        </array>
+        <key>baseURL</key>
+        <string>$(baseURL)</string>
+        <key>protocol</key>
+        <string>$(protocol)</string>
+    </dict>
 </plist>
