--- a/Kismat App/Info.plist
+++ b/Kismat App/Info.plist
@@ -27,6 +27,11 @@
 		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
+    <key>BGTaskSchedulerPermittedIdentifiers</key>
+    <array>
+        <string>codenablers.Kismat-App</string>
+    </array>
+
 	<key>baseURL</key>
 	<string>$(baseURL)</string>
 	<key>protocol</key>
