--- a/Kismat App/Kismat App.entitlements
+++ b/Kismat App/Kismat App.entitlements
@@ -8,5 +8,9 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:www.kismmet.com</string>
+	</array>
 </dict>
 </plist>
